--- a/index.html
+++ b/index.html
@@ -5,10 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabs UI</title>
-    <link rel="stylesheet" href="./assets/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/fontawesome-free-6.1.1-web/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 </head>
-<body>
+<body>  
+    <div>
+        <!-- Tab items -->
+        <div class="tabs">
+          <div class="tab-item active">
+            <i class="tab-icon fas fa-code"></i>
+            React
+          </div>
+          <div class="tab-item">
+            <i class="tab-icon fas fa-cog"></i>
+            Angular
+          </div>
+          <div class="tab-item">
+            <i class="tab-icon fas fa-plus-circle"></i>
+            Ember
+          </div>
+          <div class="tab-item">
+            <i class="tab-icon fas fa-pen-nib"></i>
+            Vue.JS
+          </div>
+          <div class="line"></div>
+        </div>
+      
+        <!-- Tab content -->
+        <div class="tab-content">
+          <div class="tab-pane active">
+            <h2>React</h2>
+            <p>React makes it painless to create interactive UIs. Design simple views for each state in your application, and React will efficiently update and render just the right components when your data changes.</p>
+          </div>
+          <div class="tab-pane">
+            <h2>Angular</h2>
+            <p>Angular is an application design framework and development platform for creating efficient and sophisticated single-page apps.</p>
+          </div>
+          <div class="tab-pane">
+            <h2>Ember</h2>
+            <p>Ember.js is a productive, battle-tested JavaScript framework for building modern web applications. It includes everything you need to build rich UIs that work on any device.</p>
+          </div>
+          <div class="tab-pane">
+            <h2>Vue.js</h2>
+            <p>Vue (pronounced /vjuː/, like view) is a progressive framework for building user interfaces. Unlike other monolithic frameworks, Vue is designed from the ground up to be incrementally adoptable. </p>
+          </div>
+        </div>
+      </div>
+
     
 </body>
 </html>
