--- a/index.html
+++ b/index.html
@@ -5,15 +5,86 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabs UI</title>
-    <link rel="stylesheet" href="./assets/css/main.css">
+    
     <link rel="stylesheet" href="./assets/fontawesome-free-6.1.1-web/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <style>
+        * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        }
+        body {
+        display: flex;
+        font-family: 'Poppins', sans-serif;
+        }
+        body > div {
+        margin: 5% auto 0;
+        max-width: 720px;
+        }
+        .tabs {
+        display: flex;
+        position: relative;
+        }
+        .tabs .line {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 0;
+        height: 6px;
+        border-radius: 15px;
+        background-color: #c23564;
+        transition: all 0.2s ease;
+        }
+        .tab-item {
+        min-width: 80px;
+        padding: 16px 20px 11px 20px;
+        font-size: 20px;
+        text-align: center;
+        color: #c23564;
+        background-color: #fff;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+        border-bottom: 5px solid transparent;
+        opacity: 0.6;
+        cursor: pointer;
+        transition: all 0.5s ease;
+        }
+        .tab-icon {
+        font-size: 24px;
+        width: 32px;
+        position: relative;
+        top: 2px;
+        }
+        .tab-item:hover {
+        opacity: 1;
+        background-color: rgba(194, 53, 100, 0.05);
+        border-color: rgba(194, 53, 100, 0.1);
+        }
+        .tab-item.active {
+        opacity: 1;
+        }
+        .tab-content {
+        padding: 28px 0;
+        }
+        .tab-pane {
+        color: #333;
+        display: none;
+        }
+        .tab-pane.active {
+        display: block;
+        }
+        .tab-pane h2 {
+        font-size: 24px;
+        margin-bottom: 8px;
+        }
+    </style>
 </head>
 <body>  
     <div>
         <!-- Tab items -->
         <div class="tabs">
-          <div class="tab-item active">
+          <div class="tab-item ">
             <i class="tab-icon fas fa-code"></i>
             React
           </div>
@@ -21,7 +92,7 @@
             <i class="tab-icon fas fa-cog"></i>
             Angular
           </div>
-          <div class="tab-item">
+          <div class="tab-item active">
             <i class="tab-icon fas fa-plus-circle"></i>
             Ember
           </div>
@@ -53,6 +124,34 @@
         </div>
       </div>
 
+      <script>
+        const $ = document.querySelector.bind(document);
+        const $$ = document.querySelectorAll.bind(document);
+
+        const tabs = $$('.tab-item');
+        const panes = $$('.tab-pane');
+
+        const tabActive = $(['.tab-item.active']);
+        const line = $('.tabs .line');
+
+        line.style.left = tabActive.offsetLeft + 'px';
+        line.style.width = tabActive.offsetWidth + 'px';
+
+        tabs.forEach((tab, index) => {
+        const pane = panes[index];
+        tab.onclick = function () {
+            $('.tab-pane.active').classList.remove('active');
+            $('.tab-item.active').classList.remove('active');
+
+            line.style.left = this.offsetLeft + 'px';
+            line.style.width = this.offsetWidth + 'px';
+
+            this.classList.add('active');
+            pane.classList.add('active');
+        };
+        });
+
+      </script>
     
 </body>
 </html>
